# moscow-realty-monitor

./: .gitignore  Dockerfile  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/analyzer/: claude_client.py  event_analyzer.py  prompts.py
backend/app/api/: cbr.py  dashboard.py  events.py  trigger.py
backend/app/collectors/: base.py  cbr_collector.py  coordinator.py  rss_collector.py
backend/app/models/: __init__.py  cbr_rate.py  event.py  source.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: __init__.py  cbr_rate.py  event.py
backend/app/utils/: deduplication.py  http_client.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/scripts/: seed_history.py
backend/tests/: conftest.py  test_analyzer.py  test_api.py  test_collectors.py
docker/: entrypoint.sh
frontend/static/css/: dashboard.css
frontend/static/js/: dashboard.js
frontend/templates/: base.html  dashboard.html  event_detail.html
