[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moscow-realty-monitor"
version = "0.1.0"
description = "Мониторинг рынка недвижимости Москвы"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "anthropic>=0.25",
    "httpx>=0.27",
    "feedparser>=6.0",
    "lxml>=5.2",
    "apscheduler>=3.10",
    "tenacity>=8.3",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
